# CoinAddress

./: .gitignore  BUILD-GUIDE.md  CROSS-COMPILE-GUIDE.md  Cargo.toml  DEPLOYMENT-GUIDE.md  EXAMPLES.md  GITHUB-ACTIONS-CHECKLIST.md  GITHUB-ACTIONS-GUIDE.md  INSTALLATION.md  LICENSE  MACOS-ARM64-MINGW-GUIDE.md  PACKAGING.md  PROJECT-FILES.md  PROJECT_SUMMARY.md  README.md  WINDOWS-MINGW-GUIDE.md  build-cross.sh  build-windows.sh  deploy-github-actions.sh  deploy-resources.sh  generate-logo.py  quick-build.sh  quick-start.sh  run.sh  setup-mingw.sh  verify-setup.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/logos/: preview.html
src/: cli.rs  gui.rs  lib.rs  monitor.rs  tests.rs
